<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_running_person"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_gyms"
        android:icon="@drawable/ic_gym_icon"
        android:title="@string/gimasios" />
    <item
        android:id="@+id/navigation_premium"
        android:icon="@drawable/ic_premium_icon"
        android:title="@string/premium" />

/>
</menu>
