<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.menstruacionnavapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_calendarFragment"
            app:destination="@id/calendarFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.menstruacionnavapp.ui.calendario.CalendarFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.menstruacionnavapp.ui.register.com.example.menstruacionnavapp.ui.GenerarEntrenamientos.EntrenamientoFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_fitness">
        <action
            android:id="@+id/action_fitnessFragment_to_gymsFragment"
            app:destination="@id/navigation_gyms" />
        <action
            android:id="@+id/action_fitnessFragment_to_entrenamientoFragment"
            app:destination="@id/navigation_entrenamiento" />
    </fragment>

    <fragment
        android:id="@+id/navigation_premium"
        android:name="com.example.menstruacionnavapp.ui.premium.PremiumFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_fitness" />

    <fragment
        android:id="@+id/navigation_gyms"
        android:name="com.example.menstruacionnavapp.ui.register.com.example.menstruacionnavapp.ui.buscarGimnasios.GymFragment"
        android:label="Buscar Gimnasios"
        tools:layout="@layout/fragment_gyms" >
        <action
            android:id="@+id/action_navigation_gyms_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.example.menstruacionnavapp.ui.calendario.CalendarFragment"
        android:label="CalendarFragment" />
    <fragment
        android:id="@+id/navigation_entrenamiento"
        android:name="com.example.menstruacionnavapp.ui.register.com.example.menstruacionnavapp.ui.GenerarEntrenamientos.EntrenamientoFragment"
        android:label="Entrenamiento"
        tools:layout="@layout/fragment_entrenamiento" />
</navigation>